infra/k8s/dev/yolo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: yolo-svc
  namespace: dev
spec:
  selector:
    app: yolo
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
