infra/k8s/dev/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: dev
spec:
  ingressClassName: nginx
  rules:
    - host: grafana-dev.sawalha-polyai.fursa.click
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana-svc
                port:
                  number: 3000
